[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/trampoline.png" type="Texture" id=1]
[ext_resource path="res://scripts/trampoline.gd" type="Script" id=2]
[ext_resource path="res://sfx/sound_bounce.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "bounce_end"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 2, 0, 1, 0 ]
}

[sub_resource type="Animation" id=2]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30, 8 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 8 )

[node name="trampoline" type="RigidBody2D"]
mass = 21.4286
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 4

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/bounce_end = SubResource( 1 )
anims/bounce_start = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 4 )

[node name="Area2D_bottom" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 32 )

[node name="CollisionShape2D_bottom" type="CollisionShape2D" parent="Area2D_bottom"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D_top" type="Area2D" parent="."]
position = Vector2( 0, -8 )

[node name="CollisionShape2D_top" type="CollisionShape2D" parent="Area2D_top"]
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D_left" type="Area2D" parent="."]
visible = false
position = Vector2( -16, 0 )

[node name="CollisionShape2D_left" type="CollisionShape2D" parent="Area2D_left"]
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D_right" type="Area2D" parent="."]
visible = false
position = Vector2( 16, 0 )

[node name="CollisionShape2D_right" type="CollisionShape2D" parent="Area2D_right"]
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
[connection signal="body_entered" from="Area2D_bottom" to="." method="_on_Area2D_bottom_body_entered"]
[connection signal="body_exited" from="Area2D_bottom" to="." method="_on_Area2D_bottom_body_exited"]
[connection signal="body_entered" from="Area2D_top" to="." method="_on_Area2D_top_body_entered"]
[connection signal="finished" from="sound" to="." method="_on_sound_finished"]
